// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings compute globals hash 1`] = `
Fr {
  "value": 19996198784166720428914107076917074510032365849254400404611644441094528984289n,
}
`;

exports[`abis wasm bindings compute private call stack item hash 1`] = `
Fr {
  "value": 3230879723118793997125108252427471059552102155544558929105689542823769599571n,
}
`;

exports[`abis wasm bindings compute public call stack item hash 1`] = `
Fr {
  "value": 1369626479296628599511967895314683808250163038382688147156251959177959447826n,
}
`;

exports[`abis wasm bindings compute secret message hash 1`] = `
Fr {
  "value": 6220068662483113241527007349428551778669520744131373768997518428761948042030n,
}
`;

exports[`abis wasm bindings compute tx hash 1`] = `
Fr {
  "value": 11028384086470399424960241201065432836500251313078792361310973684322431200173n,
}
`;

exports[`abis wasm bindings computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "buffer": {
      "data": [
        24,
        165,
        137,
        140,
        101,
        163,
        155,
        231,
        234,
        167,
        7,
        107,
        97,
        180,
        211,
        70,
        191,
        71,
        74,
        128,
        186,
        41,
        12,
        41,
        175,
        241,
        177,
        251,
        13,
        23,
        186,
        71,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "value": 12921923968526873580423865450965452589013784321633824918807523389752605479568n,
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "value": 1n,
    },
    "y": Fr {
      "value": 2n,
    },
  },
}
`;

exports[`abis wasm bindings computes a contract address from partial 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      34,
      41,
      121,
      74,
      138,
      50,
      100,
      6,
      122,
      50,
      114,
      42,
      84,
      48,
      151,
      243,
      88,
      162,
      160,
      249,
      55,
      16,
      237,
      195,
      114,
      27,
      106,
      66,
      228,
      123,
      33,
      231,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 8957681167943973616438847631514238173699549883609341685749385526208761312950n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes block hash with globals 1`] = `
Fr {
  "value": 7177915431153102916601456081755280584460785548870192083974540199919775120827n,
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 7653394882992289714855533169019502055399179742531912347686813547951736946253n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 16936439505140127403707082829495438425474294111732402569080458144683824428771n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 21090938391652199999535994101952511109725456907725564751008805452452294036010n,
}
`;

exports[`abis wasm bindings computes public data tree index 1`] = `
Fr {
  "value": 9076808949980998475110411569159266589807853958487763065147292518713994520820n,
}
`;

exports[`abis wasm bindings computes public data tree value 1`] = `
Fr {
  "value": 3n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 7262347077404413274044670947879391583109741657896097604752287127491776887739n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 10521714890263159342521589827909786073566333899903358017581007142888032736115n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 13000121189816960667906065043973697710794195579570622293955220571859166513128n,
}
`;

exports[`abis wasm bindings computes zero contract leaf 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    4,
    129,
    16,
    102,
    127,
    128,
    176,
    47,
    119,
    183,
    215,
    68,
    151,
    102,
    87,
    206,
    169,
    167,
    197,
    241,
    221,
    35,
    64,
    234,
    28,
    87,
    154,
    126,
    191,
    213,
    78,
    85,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    24,
    97,
    216,
    28,
    219,
    86,
    198,
    156,
    231,
    143,
    46,
    78,
    221,
    7,
    18,
    240,
    152,
    126,
    198,
    240,
    27,
    12,
    209,
    163,
    188,
    112,
    63,
    126,
    44,
    152,
    235,
    173,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 8554563246648466207128694080427818093826588702256491720155365584899927973422n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 11839099223661714814196842233383119055519657007373713796026764119292399532830n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 9368119665570837995905174888524883816390941475336228173888734493993721486827n,
}
`;
